# Module01

comp/stepanova_anastasia_autorace_core/: package.xml  setup.cfg  setup.py
comp/stepanova_anastasia_autorace_core/launch/: autorace_core.launch.py
comp/stepanova_anastasia_autorace_core/stepanova_anastasia_autorace_core/: start.py
module1/ex01/: commands.txt
module2/ex01/: .bashrc
module2/ex03/nastya/: CMakeLists.txt  package.xml
module2/ex03/nastya/src/: my_node.cpp
module2/ex04/: colcon_build.txt
module2/ex05/: rosnode_info.txt  rosnode_list.txt
module2/ex06/: cdm_vel.txt
module2/ex08/: rqt_console.csv  three_turtles.launch
module2/ex09/name/: CMakeLists.txt  package.xml
module2/ex10/text_to_cmd_vel/: package.xml  setup.py
module3/ex01/full_name_sum_service/: package.xml  setup.cfg  setup.py
module3/ex02/: action_client.py  action_server.py
module3/ex02/action_turtle/: package.xml  setup.cfg  setup.py
module3/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
module3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap_0.mcap
module3/ex04/: doctor.txt
module3/ex05/go_to_goal1/: package.xml  setup.cfg  setup.py
module4/ex01/: last_transform.txt  transform.txt
module4/ex02/: carrot.rviz  launch.txt
module4/ex02/carrot/: package.xml  setup.py
module4/ex02/learning_tf2_py/: package.xml  setup.py
module4/ex03/time_travel/: package.xml  setup.py
module5/ex01/: sam_bot_description.urdf
module5/ex02/: display.launch.py
module5/ex03/gazebo_diff_drive/: package.xml  (+2 more)
module7/ex01/: map.pgm  map.yaml
(+64 files in other folders)
