<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nastya</name>
  <version>0.0.0</version>
  <description>Beginner client libraries tutorials practice package</description>
  <maintainer email="a.stepanova8@g.nsu.ru">nastya</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>rclcpp</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
